@startuml
entity "D_EstacaoAno" as d_ea {
    *id : numeric <<generated>> <<PK>>
    --
    nome_estacao : text
}

entity "D_Data" as d_dt {
    *id : numeric <<generated>> <<PK>>
    --
    data : date
    dia_semana : text
    --
    criado_en : datetime
}

entity "D_Hora" as d_hr {
    *id : numeric <<generated>> <<PK>>
    *d_data : numeric <<PK>>
    --
    hora : time
    --
    criado_em : datetime
}

entity "D_DiaNoite" as d_dn {
    *id : numeric <<generated>> <<PK>>
    --
    momento_dia : text
}

entity "F_Tempo" as f_t {
    *id : numeric <<PK>>
    *d_estacao_ano : numeric <<FK>>
    *d_data : numeric <<FK>>
    *d_hora : numeric <<FK>>
    *d_dia_noite : numeric <<FK>>
    --
    temperatura : numeric
    umidade : numeric
    pressao_atmosfetica : numeric
    visibilidade : numeric
    vento : numeric
    --
    criado_em : datetime
}

d_ea ||--o{ f_t
d_dt ||--o{ f_t
f_t }o--|| d_hr
f_t }o--|| d_dn
@enduml